# ferrodb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  sql_repl.rs
crates/cli/tests/: smoke.rs
crates/engine/: Cargo.toml
crates/engine/src/: catalog.rs  eval.rs  lib.rs  mvcc.rs  plan.rs  planner.rs  treeview.rs  tuple.rs  txn.rs
crates/engine/tests/: mvcc.rs  query.rs  sql.rs  vector.rs
crates/pgwire/: Cargo.toml
crates/pgwire/src/: lib.rs  main.rs  protocol.rs
crates/pgwire/tests/: wire.rs
crates/sql/: Cargo.toml
crates/sql/src/: ast.rs  lib.rs  parser.rs  token.rs
crates/sql/tests/: lexer.rs  parser.rs
crates/storage/: Cargo.toml
crates/storage/src/: blob.rs  buffer.rs  disk.rs  encoding.rs  freelist.rs  lib.rs  meta.rs  page.rs  slotted.rs  wal.rs
crates/storage/tests/: btree.rs  btree_prop.rs  buffer.rs  disk.rs  encoding.rs  freelist.rs  meta.rs  node.rs  slotted.rs
crates/vector/: Cargo.toml
crates/vector/examples/: distbench.rs
crates/vector/src/: distance.rs  hnsw.rs  lib.rs  node.rs  persistence.rs
crates/vector/tests/: distance_prop.rs  persistence.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: interview-qa-vector-index.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  benchmarks.md  btree.md  introduction.md  mvcc.md  optimizer.md  pgwire.md  sql.md  storage.md  vectors.md  wal.md  wasm.md
web/: README.md  build.sh  ferrodb.js  ferrodb_wasm.wasm  index.html
(+14 files in other folders)
