[package]
name = "ferrodb-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrodb-kv"
path = "src/main.rs"

[[bin]]
name = "ferrodb"
path = "src/sql_repl.rs"

[dependencies]
storage = { path = "../storage" }
engine = { path = "../engine" }
rustyline = "14"

[dev-dependencies]
tempfile = "3"
